--- a/XGJCWZ/mainfest.plist
+++ b/XGJCWZ/mainfest.plist
@@ -10,25 +10,25 @@
 						<key>kind</key>
 						<string>software-package</string>
 						<key>url</key>
-						<string>https://gitee.com/xulei1985/ios/raw/master/XGJCWZ/APP/io.dcloud.xgjcwzcm.ipa</string>
+						<string>https://raw.githubusercontent.com/Xulei1985/IOS/master/XGJCWZ/APP/io.dcloud.xgjcwzcm.ipa</string>
 					</dict>
 					<dict>
 						<key>kind</key>
 						<string>display-image</string>
 						<key>url</key>
-						<string>https://gitee.com/xulei1985/ios/raw/master/XGJCWZ/57x57.png</string>
+						<string>https://raw.githubusercontent.com/Xulei1985/IOS/master/XGJCWZ/57x57.png</string>
 					</dict>
 					<dict>
 						<key>kind</key>
 						<string>full-size-image</string>
 						<key>url</key>
-						<string>https://gitee.com/xulei1985/ios/raw/master/XGJCWZ/512x512.png</string>
+						<string>https://raw.githubusercontent.com/Xulei1985/IOS/master/XGJCWZ/512x512.png</string>
 					</dict>
 				</array>
 				<key>metadata</key>
 				<dict>
 					<key>bundle-identifier</key>
-					<string>io.dcloud.xgjcwzcm</string>
+					<string>plus.io.dcloud.xgjcwzcm</string>
 					<key>bundle-version</key>
 					<string>1.0.2</string>
 					<key>kind</key>
